fix: fix scrollbar in chrome

--- a/src/styles/components/_textarea.scss
+++ b/src/styles/components/_textarea.scss
@@ -13,4 +13,8 @@
   resize: none;
   
   overflow-y: scroll;
+
+  &::-webkit-scrollbar {
+    display: none;
+  }
 }
